fix broken styles and responsiveness

--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,7 @@ div.card-container {
 		width: 100%;
 		height: 99vh;
 		margin-top: -6vh;
+		overflow: hidden;
 	}
 
 div.row {
@@ -69,29 +70,43 @@ div#prev {
 }
 
 #card-dating {
-	display: inline-block;
 	z-index: 11;
   position: relative;
 	width: 100%;
 	height: auto;
+	margin-left: auto;
+  margin-right: auto;
 }
 
 #card-kindness {
-	display: inline-block;
-	visibility: hidden;
+	display: none;
 	z-index: 11;
   position: relative;
   width: 100%;
 	height: auto;
+	margin-left: auto;
+  margin-right: auto;
 }
 
 #card-valued {	
-	display: inline-block;
-	visibility: hidden;
+	display: none;
 	z-index: 11;
   position: relative;
 	width: 100%;
 	height: auto;
+	margin-left: auto;
+  margin-right: auto;
+}
+
+#space {
+	display: none;
+	z-index: 11;
+  position: relative;
+	width: 100%;
+	height: auto;
+	margin-left: auto;
+  margin-right: auto;
+  opacity: 0;
 }
 
 div.card-slot {
